proofed up to showcases/tikz

--- a/authors.tex
+++ b/authors.tex
@@ -32,90 +32,31 @@ The back matter is structured as follows:
 
 \chapter{Style rules}
 \section{Generic rules}
-We use the \em Generic Style Rules for Linguistics\em.
+We use the \em Generic Style Rules for Linguistics \em available on \url{https://www.academia.edu/7370927/The_Generic_Style_Rules_for_Linguistics}
 
 \section{House Rules}
+The generic rules are complemented by the following house rules:
 
-\subsection{Sections and headings}
+\subsection{Academic \emph{we}}
 
-All sections (= parts of chapters) have headings and are numbered. Authors may use structures with up to
-six levels, i.e. there may be a section with the number 1.2.3.4.5.6.\footnote{
-  See page~\pageref{sec-Chinese} for an actual use of subsubsections.%
-} However, such elaborated
-structures may be difficult for the readers, so there should be a good motivation for going beyond
-three or four levels.
+Monographs and articles that are authored by a single author should use the pronoun \emph{I} rather
+than \emph{we} as in ``As I have shown in Section~3''.	
+ 
 
-Sections and subsections must be minimally two and must be exhaustive. This means that all text in a chapter
-must belong to some section, all text within a section must belong to some subsection and so on. 
+\subsection{British vs.\ American English}
+Choose one and be consitent. For edited volumes, the choice is per chapter.  
 
 
-Please do not change the capitalization of words when they are used in titles. 
-This also applies
-to the title (and subtitle) of the book itself and to the bibliographical references. Language
-Science Press never uses special capitalization.
-
-
-\subsection{Epigrams}
-You can use epigrams for your chapters. When using epigrams in edited volumes, make sure that the combination of epigram and abstract leaves room for the actual chapter to start on the same page.
-
-
-\subsection{Italics, small caps, and quotation marks}
-
-\textbf{Boldface} is generally restricted to section headings.
-\textit{Italics} are used for the following purposes:
-\begin{enumerate}
-\item for all object-language forms that are cited within the text or in set-off examples (e.g. in (2) and (4) below), unless they are written in IPA or otherwise in the context of the discussion of sounds;
-\item  when a technical term is referred to, e.g. ``the term \textit{quotative} is not appropriate here'', or ``I call this construction \textit{quotative}''. In such contexts, English technical terms are thus treated like object-language forms;
-\item for emphasis of a particular word that is not a technical term (``This is possible here, but \textit{only} here'').
-\textsc{Small caps} are used for highlighting important terms on first mention, e.g.
-\end{enumerate}
-\ea
-On this basis, the two main alignment types, namely \textsc{nominative-accusative} and \textsc{ergative-absolutive}, are distinguished.
-\z
-
-Small caps are also used for category abbreviations in interlinear glossing, and they may be used to indicate stress or focusing in example sentences:
-
-\ea 
-John called Mary a Republican and then \textsc{she} insulted \textsc{him}.
-\z
-
-Double quotation marks are generally used for distancing, in particular in the following situations:
-\begin{enumerate}
- \item  when a passage from another work is cited in the text (e.g. According to Takahashi (2009: 33), ``quotatives were never used in subordinate clauses in Old Japanese''); but block quotations do not have quotation marks;
-  \item when a technical term is mentioned that the author does not want to adopt, but wants to mention, e.g.
-
-  \ea
-  This is sometimes called ``pseudo-conservatism'', but I will not use this term here, as it could lead
-  to confusion.
-  \z
-
-\end{enumerate}
-
-
-Single quotation marks are used exclusively for linguistic meanings, as in the following:
-\ea
-Latin \textit{habere} `have' is not cognate with Old English \textit{hafian} `have'.
-\z
-
-\subsection{Punctuation}
-Please use punctuation consistently. 
-If you use initial adverbial clauses, please use commas: ``When referring to such nominatives, I use {\ldots}.''
-EN-dashes are used for ranges (e.g. 1985--1995).
-
-
-\subsection{Figures and tables}
-
-Figures and tables should come with a caption. You do not have to worry about the placement of captions as it is automatic. Like headings, the captions should not use special capitalization.  
+\subsection{Figures and tables} 
 Footnotes should not be used in tables or figures but should be attached to the text where the table is referred to.
 
 
+
+\subsection{Abbreviations}
+If you need special abbreviations that are not defined by the Leipzig Glossing Rules, put them in a table in a special section with abbreviations immediately before the first chapter of a monograph. In the case of an edited volume, the lists of abbreviations should be placed immediately before the references of the individual chapters.
+
 \subsection{Glossed examples}
-
-Please gloss all example sentences from languages other than English and provide them with idiomatic translations. The glossing should be done according
-to the Leipzig Glossing Rules. 
-If you need special abbreviations that are not defined by the Leipzig Glossing Rules, put them in a table in a special section with abbreviations immediately before the first chapter of a monograph. In the case of an edited volume, the lists of abbreviations should be placed immediately before the references of the individual chapers.
-
-The formatting of example sentences in the typological series follows the format that is used by the World Atlas of Language Structures (Haspelmath et al. 2005): If there is just one example sentence for an example number, the language name follows the example number directly, as in (\ref{ex-typology}); it may be followed by the reference.
+The formatting of example sentences in the typological series follows the format that is used by the World Atlas of Language Structures \citep{WALS}: If there is just one example sentence for an example number, the language name follows the example number directly, as in (\ref{ex-typology}); it may be followed by the reference.
 
 {\def\exfont{\normalsize\itshape}
 \ea\label{ex-typology}
@@ -141,7 +82,8 @@ hit-\textsc{imp.2sg}	dog\\
 \z
 \z
 
-If two examples with different numbers belong to the same language, the language name is repeated only if the identity of the language is not clear from the context. If an example consists of several sub-examples from different languages, the language name and references follow the letters, as in (\ref{ex:apatani}).
+% If two examples with different numbers belong to the same language, the language name is repeated only if the identity of the language is not clear from the context. 
+If an example consists of several sub-examples from different languages, the language name and references follow the letters, as in (\ref{ex:apatani}).
 
 \ea\label{ex:apatani}
 \ea
@@ -181,16 +123,8 @@ be translated inline, long quotes should be translated in a footnote.
 
 
 
-\subsection{Academic \emph{we}}
 
-Monographs and articles that are authored by a single author should use the pronoun \emph{I} rather
-than \emph{we} as in ``As I have shown in Section~3''.	
- 
-
-\subsection{British vs.\ American English}
-Choose one and be consitent. For edited volumes, the choice is per chapter.  
-
-\section{Cross-references in the text}
+\subsection{Cross-references in the text}
 
 Please use the cross-referencing mechanisms of your text editing/type setting software. Using such
 cross-referencing mechanisms is less error-prone when you shift text blocks around and in addition
@@ -202,52 +136,43 @@ final documents much more useful.
 %% Alternatively, you may put the chapter number in front of the example number (thus starting with (7.1), (7.2), ... in chapter 7, for example).
 %% [COMMENT: Bei Grammatiken ist es durchaus üblich, dass alle Beispiele im Buch durchnummeriert werden. Auch in Rießlers Arbeit sind die Beispiele komplett durchnummeriert. Ich bin mir nicht sicher, wie wichtig diese Regelung ist, und ob wir nicht Volldurchnummerierung auch erlauben sollten.]
 
-Please use capitals if you refer to numbered chapters, sections, tables, figure, or footnotes: \emph{As we have shown in
-  Section~3.1}, \emph{As Figure~3.5 shows}. Do not capitalize without a number: \emph{In the
-  following section we will discuss}.
-Depending on the series and the langauge the book is published in authors may also use the § sign
-instead of the word \emph{Section}. So the above sentence would read: \emph{As we have shown in
-  §\,3.1}.
+ 
+Depending on the series and the language the book is published in authors may  use the § sign or the word \emph{Section}. 
+
+\subsection{Epigrams}
+You can use epigrams for your chapters. When using epigrams in edited volumes, make sure that the combination of epigram and abstract leaves room for the actual chapter to start on the same page.
 
 \section{Citations and references}
 \label{sec-references-authors}
 
-A citation is author-year information (optionally with page number or other more detailed information) in the text. A bibliographical reference is metadata about a work that is cited.
-
-If books or larger articles are cited for a smaller point, exact page numbers should be provided. This is a good service to the readers, and it is also good for
-authors since it helps them to keep track of their source and enables them to find and reread the
-referenced passages and it is a good service to the readers.
-
-For references in the bibliography, we use the \emph{Unified Style Sheet for Linguistics},\footnote{\url{http://celxj.org/downloads/UnifiedStyleSheet.pdf}}. The \bibtex file is contained in the \latex
-classes that are used for typesetting \lsp books. 
-
 Please deliver a \bibtex file with all your references together with your submissions. 
 \bibtex can be exported from all common bibliography tools (We recommend BibDesk for the Mac and JabRef for all other platforms). 
 
-Please provide all first and last names of all authors and editors. Do not use et~al. in the Bibtex file; this will be generated automatically when inserted.
+Please provide all first and last names of all authors and editors. Do not use {\em et~al.}  in the Bibtex file; this will be generated automatically when inserted.
 
 For bipartite family names like ``von Stechow'', ``Van Eynde'', and ``de Hoop'' make sure that these
-family names are contained in curly brackets. These authors will then be cited as
-\citet{VanEynde2006a} and \citet{vonStechow84a}. Note that Dutch names like ``de Hoop'' are not treated differently from other surnames.
+family names are contained in curly brackets.
+% These authors will then be cited as \citet{VanEynde2006a} and \citet{vonStechow84a}.
+ Note that Dutch names like ``de Hoop'' are not treated differently from other surnames.
 
-Many bibliographies have inconsistent capitalization. We decapitalize all titles and booktitles. If there is a proper name in a title, enclose it in \{\} to prevent decapitalization, e.g. \texttt{title = \{The languages of \{A\}frica\}\}}. Use the same procedure for German nouns and all other characters in titles which should not be decapitalized. This is not necessary for other fields, especially the author and editor fields, where capitalization is kept as is.
+Many bibliographies have inconsistent capitalization. We decapitalize all titles and booktitles. If there is a proper name in a title, enclose it in \{\} to prevent decapitalization, e.g. \texttt{title = \{The languages of \{A\}frica\}}. Use the same procedure for German nouns and all other characters in titles which should not be decapitalized. This is not necessary for other fields, especially the author and editor fields, where capitalization is kept as is.
 
-The references in your \bibtex file will automatically be correctly typeset. So, provided the
+The references in your \bibtex file will automatically be typeset correctly. So, provided the
 \bibtex file is correct, authors do not have to worry about this. But there are some things to
 observe in the main text. Please cite as shown in Table~\ref{tab-citation}.
 
 \begin{table}[htbp]
 \caption{Citation style for \lsp}%
 \label{tab-citation}
-\begin{tabular}{lp{9cm}}
+\begin{tabular}{p{1.8cm}>{\small}p{7cm}p{2cm}}
 \lsptoprule
-citation type & example\\
+citation type & example &yields\\
 \midrule
-author & As \citet[215]{MZ85a} have shown\\
-       & As \citet[215]{MZ85a} and \citet{Bloomfield1933language} have shown\\
-work   & As was shown in \citew[215]{Saussure16a}, this is a problem for theories that \ldots\\
-work   & This is not true \citep{Saussure16a,Bloomfield1933language}.\\
-no double parentheses   & This is not true (\citealt{Saussure16a} and especially \citealt{Bloomfield1933language}).\\
+author &  \computer{\raggedright As {\bs}citet[215]\{MZ85a\} have shown} &As \citet[215]{MZ85a} have shown\\[2em]
+       &  \computer{\raggedright As {\bs}citet[215]\{MZ85a\} and {\bs}citet\{Bloomfield1933language\} have shown} &  As \citet[215]{MZ85a} and \citet{Bloomfield1933language} have shown\\[2em]
+work   &  \computer{\raggedright As was shown in {\bs}citew[215]\{Saussure16a\}, this is a problem for theories that \ldots} & As was shown in \citew[215]{Saussure16a}, this is a problem for theories that \ldots\\[2em]
+work   &  \computer{\raggedright This is not true {\bs}citep\{Saussure16a, \mbox{Bloomfield1933language\}}.} & This is not true \citep{Saussure16a,Bloomfield1933language}.\\[2em]
+no double parentheses   & \computer{\raggedright This is not true ({\bs}citealt\{Saussure16a\} and especially {\bs}citealt\{Bloomfield1933language\}). }& This is not true (\citealt{Saussure16a} and especially \citealt{Bloomfield1933language}).\\
 \lspbottomrule
 \end{tabular}
 \end{table}
