--- a/openness.tex
+++ b/openness.tex
@@ -6,12 +6,16 @@
 
 
 \section{Tracking Progress}
-A book is a complex document. Once your book is in final production mode, we use github to track versions and changes (\figref{fig:latex:github}). You can use github during the writing process as well (in fact, this will make the transition much smoother. In order to keep things organized, we use Trello (\figref{fig:latex:trello}). Trello allows to distribute tasks such as bibliography update, proofreading, index creation and so on and keeps track of progress.
+\subsection{github}
+A book is a complex document. Once your book is in final production mode, we use github to track versions and changes (\figref{fig:latex:github}). You can use github during the writing process as well (in fact, this will make the transition much smoother).
+
+\subsection{Trello}
+In order to keep things organized, we use Trello (\figref{fig:latex:trello}). Trello allows to distribute tasks such as bibliography update, proofreading, index creation and so on and keeps track of progress.
 
 \begin{figure}
 \caption{Github highlighting version history}
 \label{fig:latex:github}
-%  \includegraphics[width=\textwidth]{github.png}
+ \includegraphics[width=\textwidth]{github.png}
 \end{figure}
 
 \begin{figure}
