--- a/wrap-global.tex
+++ b/wrap-global.tex
@@ -90,9 +90,7 @@
 \subtitle{Complete set of guidelines}
 \BackTitle{Language Science Press guidelines}    
 
-
-\newcommand{\computer}[1]{\texttt{#1}}
-\newcommand{\bs}{$\backslash$}
+\input{localcommands.tex}
 \begin{document}                
 % \maketitle                
 \tableofcontents      
