--- a/conversion.tex
+++ b/conversion.tex
@@ -1,6 +1,6 @@
 \chapter{Conversion} 
 \section{Conversion using the webservice}
-While it is preferable to work in \latex from the start, this is not always possible. For edited volumes, for instance, it is common that not all authors can acquire the necessary skills in due course. For those cases, you can use the templates for MS Word and LibreOffice provided on http://langsci-press.org/Meta/downloads. Follow the instructions in the templates. When you are finished, upload your file to \url{http://glottotopia.org/doc2tex/home}. This will give you a file which you can copy into the skeleton (\figref{fig:conversion:glottotopia}). You have the choice between `raw' and `mod'. Generally, `mod' is preferable as a number of adaptations for linguists and \lsp are already in place. If you run into problems with `mod', you can use `raw' as a fallback. You can then either copy and paste the converted document to a file of your own, or you can open the document directly in writelatex (\figref{fig:conversion:writelatex}).
+While it is preferable to work in \latex from the start, this is not always possible. For edited volumes, for instance, it is common that not all authors can acquire the necessary skills in due course. For those cases, you can use the templates for MS Word and LibreOffice provided on \url{http://test.langsci-press.org/information/templates}. Follow the instructions in the templates. When you are finished, upload your file to \url{http://glottotopia.org/doc2tex/home}. This will give you a file which you can copy into the skeleton (\figref{fig:conversion:glottotopia}). You have the choice between `raw' and `mod'. Generally, `mod' is preferable as a number of adaptations for linguists and \lsp are already in place. If you run into problems with `mod', you can use `raw' as a fallback. You can then either copy and paste the converted document to a file of your own, or you can open the document directly in writelatex (\figref{fig:conversion:writelatex}).
 
 \begin{figure}
 \includegraphics[width=\textwidth]{converter.png} 
@@ -11,7 +11,7 @@ While it is preferable to work in \latex from the start, this is not always poss
 \begin{figure}
 \includegraphics[width=\textwidth]{conversionwritelatex.png} 
 \caption{Opening the converted document on writelatex.}
-\label{fig:conversion:glottotopia}
+\label{fig:conversion:writelatex}
 \end{figure}
 
 \section{Manual conversion}
@@ -34,18 +34,18 @@ These include examples, cross-references and some bibliographical references.
 \subsection{Examples}
 The output of automatically converted examples has the example formatting separated from the example content.  
 \begin{verbatim}
- \ea%1
-    \label{ex:1}
-    \langinfo{lg}{fam}{src}\\
-    \gll\\
-        \\
-    \glt
-    \z
+\ea%1
+  \label{ex:1}
+  \langinfo{lg}{fam}{src}\\
+  \gll\\
+      \\
+  \glt
+\z
 
-             Ceci n'est pas une pomme
+Ceci n' est pas une pomme
 
- this \textsc{neg} \textsc{cop}.3\textsc{sg.prs}  
-   \textsc{neg}  \textsc{det.f} apple
+ this \textsc{neg}  {\cop.3\sg.\prs} \textsc{neg}   
+\textsc{det.f} apple
 
 ``This is not an apple''
 \end{verbatim}
@@ -53,26 +53,27 @@ The output of automatically converted examples has the example formatting separa
 One has to manually join the former and the latter part to get
 
 \begin{verbatim}
- \ea%1
-    \label{ex:1}
+\ea%1
+  \label{ex:1}
     \langinfo{lg}{fam}{src}\\
-    \gll Ceci n'est pas une pomme \\
-         this \textsc{neg} \textsc{cop}.3\textsc{sg.prs} 
-                    \textsc{neg}  \textsc{det.f} apple\\
-    \glt ``This is not an apple''
-    \z 
-\end{verbatim}
+  \gll Ceci n'             est                 pas une pomme \\
+      this \textsc{neg} {\cop.3\sg.\prs} \textsc{neg}   
+      \textsc{det.f} apple\\
+  \glt ``This is not an apple''
+\z 
+\end{verbatim} 
 
-Furthermore, \computer{{\bs}langinfo} has to be adapted to reflect the correct language, family and source of the example, or removed altogether. 
+Furthermore, \computer{{\bs}langinfo} has to be adapted to reflect the correct language, family and source of the example, or removed altogether. In this particular case, one would use  \computer{{\bs}langinfo\{French\}\{Indo-European\}\{René Magritte\}{\bs}{\bs}}
 
 \subsection{Graphics}
-All graphics are commented out by default since the files will not be available on writelatex until you upload them. 
+All graphics are commented out by default since the files will not be available on writelatex until you upload them. So the following stretch
 
 \begin{verbatim}
  \begin{figure}[h]
 
  [Warning: Image ignored] % Unhandled or unsupported graphics:
-%\includegraphics[width=3.3898in,height=3.4319in,width=\textwidth]{a8dc5773011814b3b98013db7af4ec7e9-img1.png}
+%\includegraphics[width=3.3898in,height=3.4319in,width=\textwidth]
+{a8dc5773011814b3b98013db7af4ec7e9-img1.png}
 \caption[Some caption]{Some caption}
 
 \end{figure}
@@ -82,11 +83,9 @@ has to become
 
 
 \begin{verbatim}
- \begin{figure}[h]
- 
-\includegraphics[width=\textwidth]{therealnameofthefile.png}
-\caption[Some caption]{Some caption}
-\label{fig:chaptername:filehandle}
-
+\begin{figure}[h]
+ \includegraphics[width=\textwidth]{therealnameofthefile.png}
+ \caption{Some caption}
+ \label{fig:chaptername:filehandle}
 \end{figure}
 \end{verbatim}
