--- a/indexers.tex
+++ b/indexers.tex
@@ -10,11 +10,11 @@ For the various ways to add entries to the index, refer to \tabref{tab:latex:ind
   type & \rm\normalsize command & indexed term \\
   \midrule
   Subject Index& Nominalized sentences \textbf{$\setminus$is\{nominalization\}} are current. & nomina\-lization \\
-  Subject Index identical& ... while \textbf{$\setminus$isi\{nominalization\}} is less frequent ...  & nomina\-lization \\[2em]
+  \mbox{Subject Index} identical& ... while \textbf{$\setminus$isi\{nominalization\}} is less frequent ...  & nomina\-lization \\[2em]
   Language Index & Varieties of Chinese \textbf{$\setminus$il\{Sinitic languages\}} differ in that ...& Sinitic languages \\
   Language Index identical& The \textbf{$\setminus$ili\{Sinitic languages\}}, \mbox{however}, ... & Sinitic languages \\[2em]
   Author Index & In Homeric \textbf{$\setminus$ia\{Homer\}} language, ...  & Homer\\
-  Author Index identical & This contradicts \textbf{$\setminus$iai\{Homer\}}, who had advocated ... & Homer \\
+  \mbox{Author Index} identical & This contradicts \textbf{$\setminus$iai\{Homer\}}, who had advocated ... & Homer \\
   \lspbottomrule
  \end{tabular}
 \end{table}
@@ -31,19 +31,13 @@ makeindex -o yourfilename.ind yourfilename.idx
 makeindex -o yourfilename.lnd yourfilename.ldx
 \end{verbatim}
  
-In order to produce the author index, use
+The author index should be produced automatically.
 % \begin{verbatim} 
-%     xindy -M texindy -M page-ranges -L english -C utf8 authors.idx
+% authorindex -i -p yourfilename.aux > yourfilename.bib.adx
+% sed 's/|hyperpage//' yourfilename.adx > yourfilename.txt.adx 
+% cat yourfilename.bib.adx yourfilename.txt.adx > yourfilename.combined.adx
+% makeindex -o yourfilename.and yourfilename.combined.adx
 % \end{verbatim}
-% \todo{check filenames}
-% 
-% Another solution is 
-\begin{verbatim} 
-authorindex -i -p yourfilename.aux > yourfilename.bib.adx
-sed 's/|hyperpage//' yourfilename.adx > yourfilename.txt.adx 
-cat yourfilename.bib.adx yourfilename.txt.adx > yourfilename.combined.adx
-makeindex -o yourfilename.and yourfilename.combined.adx
-\end{verbatim}
 
 After the creation of the indexes, check for every index whether it contains only terms that should be found in this index (no languages in Subject Index and vice versa). Furthermore, check that every concept has exactly one entry in the index. It is easy to index the same concept once in the singular and then again in the plural, or once with a hyphen and once without. 
 
